[package]
name = "before"
version = "0.1.0"
authors = ["iliana etaoin <iliana@buttslol.net>"]
edition = "2018"
publish = false

[features]
default = ["gzip", "tls"]
gzip = ["reqwest/gzip"]
tls = ["reqwest/default-tls"]

[dependencies]
askama = "0.10"
derive_builder = "0.10"
either = "1"
itertools = "0.10"
lazy_static = "1"
log = "0.4"
rand = "0.8"
serde_urlencoded = "0.7"
toml = "0.5"

[dependencies.anyhow]
version = "1"
features = ["backtrace"]

[dependencies.chrono]
version = "0.4"
default-features = false
features = ["clock", "serde", "std"]

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "stream"]

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.serde_json]
version = "1"
features = ["raw_value"]

[dependencies.tokio-util]
version = "0.6"
features = ["compat"]
