[package]
name = "before"
version = "0.2.0"
authors = ["iliana etaoin <iliana@buttslol.net>"]
edition = "2018"
publish = false

[features]
default = ["gzip", "tls"]
gzip = ["reqwest/gzip"]
tls = ["reqwest/default-tls"]

[dependencies]
anyhow = "1"
askama = "0.10"
derive_builder = "0.10"
derive_more = "0.99"
http-range = "0.1"
indexmap = "1"
itertools = "0.10"
lazy_static = "1"
log = "0.4"
lru = "0.7"
rand = "0.8"
serde_plain = "1"
serde_urlencoded = "0.7"
toml = "0.5"

[dependencies.either]
version = "1"
features = ["serde"]

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "stream"]

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]

[dependencies.serde]
version = "1"
features = ["derive", "rc"]

[dependencies.serde_json]
version = "1"
# arbitrary_precision is load-bearing, see `INFINITY` in src/api.rs
# (but given we don't directly deal in floating point values, this probably makes Before faster??)
features = ["arbitrary_precision", "raw_value"]

[dependencies.time]
version = "0.3"
features = ["macros", "formatting", "parsing"]

[dependencies.tokio-util]
version = "0.6"
features = ["compat"]

[dependencies.zip]
version = "0.5"
default-features = false
features = ["deflate"]

[dev-dependencies]
maplit = "1"
